--- a/estilos/mobile-first.css
+++ b/estilos/mobile-first.css
@@ -8,25 +8,25 @@
     --cor4: #2d6462;  
     --cor6: #6cd3cf;  
 }
-
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 body {
     background-color: var(--cor0);
 }
-#principal {
+#container {
     height: 100vh;
     width: 100%;
     display: flex;
-    flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
 }
-.meiotela {    
+
+.telalogin {    
     height: 520px;
     width: 250px;
     background-color: white;
@@ -36,19 +36,21 @@ body {
     transition: width .4s, height .4s;
     transition-timing-function: ease;
 }
-.um {
+
+.bloco-imagem {
     height: 40%;
     background: black url(../imagens/back-phone.jpg) center center no-repeat scroll;
     background-size: cover;
 }
-.dois {
+
+.bloco-form {
     padding: 0px 10px;
 }
-.dois h1 {
+.bloco-form h1 {
     padding: 12px;
     text-align: center;
 }
-.saudacao {
+p.saudacao {
     font-size: 13px;
     line-height: 1.3em;   
 }
@@ -56,40 +58,36 @@ p.login-senha {
     background-color: var(--cor0);
     height: 40px;
     margin-top: 5px;
-    padding: 2px 3px 2.5px;
+    padding: 2px 3px 2.5px 5px;
     border-radius: 8px;
     display: flex;
-    flex-flow: row nowrap;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-}
-.material-icons {    
-    color: white;
-    margin: auto 7px auto 5px;
+    column-gap: 7px;
 }
 .login-senha input {
     background-color: var(--cor1);
-    border: unset;
-    align-self: stretch;
-    flex-grow: 1;
     border-radius: 8px;
-    outline: unset;
     text-indent: 5px;
     font-size: 1em;
+    border: unset;
+    outline: unset;
+    align-self: stretch;
+    flex-grow: 1;
 }
 .login-senha input:focus {
     background-color: white;
 }
-.botao-flex {
-    display: flex;
-    flex-flow: column nowrap;
-}
 .botao {   
-    margin: 5px 0px 0px;
+    font-size: 1em;
+    width: 100%;
     height: 40px;    
+    display: block;
+    margin-top: 5px;
     border-radius: 6px;
     border: unset;
-    font-size: 1em;
+    cursor: pointer;
 }
 .entrar {
     color: white;
