--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,55 +1,37 @@
 @charset "UTF-8";
 
-:root {
-    --cor0: #5e2c82;
-    --cor1: #94cfcd;
-    --cor2: #4fb0ac;
-    --cor3: #499f9c;
-    --cor4: #2d6462;  
-    --cor6: #6cd3cf;  
+body {
+    background-image: linear-gradient(to top, var(--cor2), var(--cor0));
 }
-@media (min-width: 766px) and (max-width: 1199px) {
 
-    body {
-        background-image: linear-gradient(to top, var(--cor2), var(--cor0));
-    }
-
-    .meiotela {    
-        height: 280px;
-        width: 85%;
-        display: flex;
-        flex-flow: row nowrap;
-    }
-    .um {
-        width: 50%;
-        height: auto;
-        align-self: stretch;  
-    }
+.telalogin {    
+    height: 280px;
+    width: 85%;
+    display: flex;
+    flex-direction: row;
 }
+.bloco-imagem {
+    width: 50%;
+    height: auto;
+}
+
 @media (min-width: 1200px) {
 
-    body {
-        background-image: linear-gradient(to top, var(--cor2), var(--cor0));
-    }
-
-    .meiotela {    
+    .telalogin {    
         height: 350px;
         width: 950px;
-        display: flex;
-        flex-flow: row nowrap;
     }
     h1 {
         font-size: 2em;
     }
-    .saudacao {
+    p.saudacao {
         font-size: 16px;
         margin: 5px 0px 15px;
         line-height: 1.4em;
     }   
-    .um {
+    .bloco-imagem {
         width: 85%;
-        height: auto;
-        align-self: stretch;  
+        height: auto; 
         order: 1;
     }
 
